examples/test/testpolicy12388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12388
  namespace: namespace422
spec:
  podSelector:
    matchLabels:
      key43: value39
      key13: value40
      key11: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value19
          key37: value27
      podSelector:
        matchLabels:
          key7: value32
          key3: value36
